# AI-Diligence-Copilot

./: .env.example  .gitignore  Dockerfile  README.md  ai-tutor-product-spec.md  app.py  auth.py  config.py  db.py  docker-compose.yml  export.py  extract.py  pipeline.py  prompts.py  pyproject.toml  requirements-docker.txt  requirements.txt  schema.py  viz.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
components/: __init__.py  analysis_view_tab.py  arr_bridge_chart.py  chat.py  cohort_chart.py  competitor_table.py  history_tab.py  metrics_dashboard.py  new_analysis_tab.py  risk_table.py  sidebar.py  styles.py  welcome.py
core/: auth.py  config.py  database.py  extract.py  models.py
demo/: loader.py
demo/samples/: acme_saas.json  peak_health.json  summit_retail.json
examples/samples/: acme_saas.json  peak_health.json  summit_retail.json
export/: markdown_export.py  pdf.py
export/templates/: memo.css  memo.html
pages/: 1_New_Analysis.py  2_Analysis_View.py  3_History.py
pipeline/: llm_client.py  orchestrator.py  prompts.py  stage_a_condense.py  stage_b_analysis.py  stage_c_memo.py
schemas/: __init__.py  common.py  input.py  memo.py  non_saas.py  saas.py
styles/: crayon.css  custom.css
tests/: test_export.py  test_pipeline.py  test_schemas.py
tutor/: classifier.py  engine.py  profile.py  prompts.py
