[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "meridian-diligence-copilot"
version = "0.1.0"
description = "AI-powered commercial due diligence copilot for growth equity investors"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "anthropic>=0.18.0",
    "instructor>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "plotly>=5.18.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
